--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^4.3.1",
     "@next/third-parties": "^14.1.3",
     "axios": "^1.6.8",
+    "disable-context-menu": "^1.0.1",
     "lottie-react": "^2.4.0",
     "next": "^14.1.3",
     "react": "^18.3.1",
@@ -24,6 +25,7 @@
     "react-icons": "^4.11.0",
     "react-tilt": "^1.0.2",
     "react-toastify": "^10.0.4",
+    "sweetalert2": "^11.11.0",
     "typewriter-effect": "^2.21.0",
     "vanilla-tilt": "^1.8.1"
   },
